metadata/force-app/main/default/objects/CustomName_ozNox__c/CustomName_ozNox__c.object-meta.xml
<CustomObject>
    <description>Description_cvdjK</description>
    <label>CustomLabel_Fakas</label>
    <nameField>
        <label>CustomLabel_Fakas</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_Fakass</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>