metadata/force-app/main/default/objects/CustomName_ozNox__c/fields/CustomField_BmCXs__c.field-meta.xml
<CustomField>
    <fullName>CustomField_BmCXs__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldioArK</label>
    <length>255</length>
    <type>Text</type>
</CustomField>