metadata/force-app/main/default/objects/CustomName_ozNox__c/fields/CustomField_lEYoG__c.field-meta.xml
<CustomField>
    <fullName>CustomField_lEYoG__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldecODX</label>
    <length>255</length>
    <type>Text</type>
</CustomField>